--- a/examples/example_notebook.ipynb
+++ b/examples/example_notebook.ipynb
@@ -1152,7 +1152,7 @@
    "source": [
     "# Append cloned package path to system path\n",
     "import sys\n",
-    "#sys.path.append('/g/data/ [path/to/your/project/directory] /med-live_diagnostics/src')\n",
+    "sys.path.append('/g/data/ [path/to/your/project/directory] /med-live_diagnostics/src')\n",
     "\n",
     "# Import med_diagnostics package for local Gadi location\n",
     "import med_diagnostics"
