--- a/docs/examples/example_notebook.ipynb
+++ b/docs/examples/example_notebook.ipynb
@@ -5,7 +5,7 @@
    "id": "9bffbcf9-18ef-445c-8638-bd1d096c4c16",
    "metadata": {},
    "source": [
-    "# ACCESS-NRI Model Live Diagnostics v0.0.1\n",
+    "# Getting started tutorial\n",
     "\n",
     "The Model Live Diagnostics framework is designed to provide useful and practical Jupyter-based tools for the monitoring and diagnostic analyses of currently running (aka ‘live’) ACCESS climate models on the Australian NCI supercomputer Gadi.\n",
     "\n",
