--- a/docs/notebooks/getting_started_tutorial.ipynb
+++ b/docs/notebooks/getting_started_tutorial.ipynb
@@ -2,11 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "6df41867-a9a6-4467-8272-22e179c3d31f",
+   "metadata": {},
+   "source": [
+    "# Getting started tutorial"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9bffbcf9-18ef-445c-8638-bd1d096c4c16",
    "metadata": {},
    "source": [
-    "# ACCESS-NRI Model Live Diagnostics v0.0.1\n",
-    "\n",
     "The Model Live Diagnostics framework is designed to provide useful and practical Jupyter-based tools for the monitoring and diagnostic analyses of currently running (aka ‘live’) ACCESS climate models on the Australian NCI supercomputer Gadi.\n",
     "\n",
     "The ACCESS-NRI Model Live Diagnostics package, and the tools that support it, are still a work in progress. We value your feedback, especially in the form of reporting issues/bugs or suggesting ways to improve the framework. To do so, please open an issue [here](https://github.com/ACCESS-NRI/MED-live-diagnostics/issues).\n",
@@ -74,25 +80,25 @@
     "\n",
     "i) Once a session is started, you will see the following sesion summary and <span style=\"color:lightblue\">blue</span> status message while the new intake catalog is being built from the live model data. Depending on the size of the model data, this can take a number of minutes. The dask cluster address (in this case: /proxy/40595/status) can be used to monitor data retrieval by adding it to the 'Dask Dashboard URL' found in the left panel.\n",
     "<div>\n",
-    "<img src=\"assets/tutorial_image_1.png\" width=\"35%\", border=1, bordercolor='white'/>\n",
+    "<img src=\"https://github.com/ACCESS-NRI/MED-live-diagnostics/blob/main/docs/notebooks/assets/tutorial_image_1.png\" width=\"60%\", border=1, bordercolor='white'/>\n",
     "</div>\n",
     "<br></br>\n",
     "\n",
     "ii) Once the live model data catalog has been successfully built, the <span style=\"color:lightblue\">blue</span> status message will update and the <span style=\"color:orange\">orange</span> status message will report the time and date of the last live model catalog build.  \n",
     "<div>\n",
-    "<img src=\"assets/tutorial_image_2.png\" width=\"35%\", border=1, bordercolor='white'/>\n",
+    "<img src=\"https://github.com/ACCESS-NRI/MED-live-diagnostics/blob/main/docs/notebooks/assets/tutorial_image_2.png\" width=\"60%\", border=1, bordercolor='white'/>\n",
     "</div>\n",
     "<br></br>\n",
     "\n",
     "iii) All available datasets from the selected model will be listed in the dropdown. Select the dataset you wish to monitor and click 'Load dataset'.\n",
     "<div>\n",
-    "<img src=\"assets/tutorial_image_3.png\" width=\"35%\", border=1, bordercolor='white'/>\n",
+    "<img src=\"https://github.com/ACCESS-NRI/MED-live-diagnostics/blob/main/docs/notebooks/assets/tutorial_image_3.png\" width=\"60%\", border=1, bordercolor='white'/>\n",
     "</div>\n",
     "<br></br>\n",
     "\n",
     "iv) Once loaded, a plot displaying the first data variable in the list will appear. Use the dropdown list to select and plot any available model variables.\n",
     "<div>\n",
-    "<img src=\"assets/tutorial_image_4.png\" width=\"35%\", border=1, bordercolor='white'/>\n",
+    "<img src=\"https://github.com/ACCESS-NRI/MED-live-diagnostics/blob/main/docs/notebooks/assets/tutorial_image_4.png\" width=\"60%\", border=1, bordercolor='white'/>\n",
     "</div>\n",
     "<br></br>\n",
     "\n",
@@ -101,19 +107,19 @@
     "\n",
     "v) The reference model dropdown menu is pre-filled with all available models of the same type from the [ACCESS-NRI Intake Catalog](https://github.com/ACCESS-NRI/access-nri-intake-catalog) (in this example the list contains all models of type 'CM2'). Select the reference model of choice and click 'Load model'.\n",
     "<div>\n",
-    "<img src=\"assets/tutorial_image_5.png\" width=\"35%\", border=1, bordercolor='white'/>\n",
+    "<img src=\"https://github.com/ACCESS-NRI/MED-live-diagnostics/blob/main/docs/notebooks/assets/tutorial_image_5.png\" width=\"60%\", border=1, bordercolor='white'/>\n",
     "</div>\n",
     "<br></br>\n",
     "\n",
     "vi) If an optional reference model has been selected, a reference dataset dropdown menu will appear displaying all available datasets from the selected reference model. Select the dataset you wish to monitor and click 'Load dataset'.\n",
     "<div>\n",
-    "<img src=\"assets/tutorial_image_6.png\" width=\"35%\", border=1, bordercolor='white'/>\n",
+    "<img src=\"https://github.com/ACCESS-NRI/MED-live-diagnostics/blob/main/docs/notebooks/assets/tutorial_image_6.png\" width=\"60%\", border=1, bordercolor='white'/>\n",
     "</div>\n",
     "<br></br>\n",
     "\n",
     "vii) Once loaded, a plot displaying the first data variable in the list will appear. Use the dropdown list to select and plot any available reference model variables. N.B. Unlike the live model plot above, if multiple flavours of a particular model exist (e.g. b7578a, by578b etc), all variants will be displayed.\n",
     "<div>\n",
-    "<img src=\"assets/tutorial_image_7.png\" width=\"35%\", border=1, bordercolor='white'/>\n",
+    "<img src=\"https://github.com/ACCESS-NRI/MED-live-diagnostics/blob/main/docs/notebooks/assets/tutorial_image_7.png\" width=\"60%\", border=1, bordercolor='white'/>\n",
     "</div>\n",
     "<br></br>"
    ]
@@ -137,7 +143,7 @@
    "id": "02b41227-4e15-48cd-a1fa-313ce802849a",
    "metadata": {},
    "source": [
-    "<font size=\"4\">4. End live model session</font>\n",
+    "### 4. End live model session\n",
     "\n",
     "The safest way to end the current live session is to use the <i>session.end_session()</i> function which ends both the <i>dask</i> and <i>background scheduler</i> processes."
    ]
