--- a/docs/notebooks/getting_started_tutorial.ipynb
+++ b/docs/notebooks/getting_started_tutorial.ipynb
@@ -86,7 +86,7 @@
     "\n",
     "ii) Once the live model data catalog has been successfully built, the <span style=\"color:lightblue\">blue</span> status message will update and the <span style=\"color:orange\">orange</span> status message will report the time and date of the last live model catalog build.  \n",
     "<div>\n",
-    "<img src=https://github.com/ACCESS-NRI/MED-live-diagnostics/blob/main/docs/notebooks/assets/tutorial_image_2.png" width=\"60%\", border=1, bordercolor='white'/>\n",
+    "<img src=\https://github.com/ACCESS-NRI/MED-live-diagnostics/blob/main/docs/notebooks/assets/tutorial_image_2.png\" width=\"60%\", border=1, bordercolor='white'/>\n",
     "</div>\n",
     "<br></br>\n",
     "\n",
