--- a/docs/notebooks/getting_started_tutorial.ipynb
+++ b/docs/notebooks/getting_started_tutorial.ipynb
@@ -80,7 +80,7 @@
     "\n",
     "i) Once a session is started, you will see the following sesion summary and <span style=\"color:lightblue\">blue</span> status message while the new intake catalog is being built from the live model data. Depending on the size of the model data, this can take a number of minutes. The dask cluster address (in this case: /proxy/40595/status) can be used to monitor data retrieval by adding it to the 'Dask Dashboard URL' found in the left panel.\n",
     "<div>\n",
-    "<img src=\"https://github.com/ACCESS-NRI/MED-live-diagnostics/blob/main/docs/notebooks/assets/tutorial_image_1.png\" width=\"60%\", border=1, bordercolor='white'/>\n",
+    "<img src=https://github.com/ACCESS-NRI/MED-live-diagnostics/blob/main/docs/notebooks/assets/tutorial_image_1.png width=\"60%\", border=1, bordercolor='white'/>\n",
     "</div>\n",
     "<br></br>\n",
     "\n",
