--- a/docs/notebooks/getting_started_tutorial.ipynb
+++ b/docs/notebooks/getting_started_tutorial.ipynb
@@ -33,7 +33,8 @@
    "id": "f55c537e-6eac-4c7e-a85e-3893c26a1551",
    "metadata": {},
    "source": [
-    "<font size=\"4\">1. First, lets import the <i>med_diagnostics</i> package that has been cloned to an accessbile project location on Gadi</font>"
+    "### 1. Set up access \n",
+    "First, lets import the <i>med_diagnostics</i> package that has been cloned to an accessbile project location on Gadi"
    ]
   },
   {
@@ -45,8 +46,7 @@
    "source": [
     "# Append cloned package path to system path\n",
     "import sys\n",
-    "#sys.path.append('/g/data/ [path/to/your/project/directory] /med-live_diagnostics/src')\n",
-    "sys.path.append('/g/data/kj13/users/mgt562/med-live_diagnostics/src')\n",
+    "sys.path.append('/g/data/ [path/to/your/project/directory] /med-live_diagnostics/src')\n",
     "\n",
     "# Import med_diagnostics package for local Gadi location\n",
     "import med_diagnostics\n",
@@ -60,7 +60,7 @@
    "id": "8e3fd80f-c423-430a-b08a-df66b61fc80c",
    "metadata": {},
    "source": [
-    "### 2. Create live model session providing:\n",
+    "### 2. Create live model session\n",
     " - model_type: str (Type of ACCESS model (e.g. CM2, OM2)).\n",
     " - model_path: str (Path to model output directory/files on Gadi.)\n",
     "\n",
@@ -76,29 +76,30 @@
     "- Creates both the <span style=\"color:lightblue\">blue</span> 'status' and <span style=\"color:orange\">orange</span> 'catalog' information boxes.\n",
     "\n",
     "---------------------\n",
-    "### 3. Using the widgets\n",
+    "\n",
+    "### 3. Using the interface\n",
     "\n",
     "i) Once a session is started, you will see the following sesion summary and <span style=\"color:lightblue\">blue</span> status message while the new intake catalog is being built from the live model data. Depending on the size of the model data, this can take a number of minutes. The dask cluster address (in this case: /proxy/40595/status) can be used to monitor data retrieval by adding it to the 'Dask Dashboard URL' found in the left panel.\n",
     "<div>\n",
-    "<img src=\"https://raw.githubusercontent.com/ACCESS-NRI/MED-live-diagnostics/main/docs/notebooks/assets/tutorial_image_1.png\" width=\"60%\", border=1, bordercolor='white'/>\n",
+    "<img src=\"https://raw.githubusercontent.com/ACCESS-NRI/MED-live-diagnostics/main/docs/notebooks/assets/tutorial_image_1.png\" width=\"100%\", border=1, bordercolor='white'/>\n",
     "</div>\n",
     "<br></br>\n",
     "\n",
     "ii) Once the live model data catalog has been successfully built, the <span style=\"color:lightblue\">blue</span> status message will update and the <span style=\"color:orange\">orange</span> status message will report the time and date of the last live model catalog build.  \n",
     "<div>\n",
-    "<img src=\"https://raw.githubusercontent.com/ACCESS-NRI/MED-live-diagnostics/main/docs/notebooks/assets/tutorial_image_2.png\" width=\"60%\", border=1, bordercolor='white'/>\n",
+    "<img src=\"https://raw.githubusercontent.com/ACCESS-NRI/MED-live-diagnostics/main/docs/notebooks/assets/tutorial_image_2.png\" width=\"100%\", border=1, bordercolor='white'/>\n",
     "</div>\n",
     "<br></br>\n",
     "\n",
     "iii) All available datasets from the selected model will be listed in the dropdown. Select the dataset you wish to monitor and click 'Load dataset'.\n",
     "<div>\n",
-    "<img src=\"https://raw.githubusercontent.com/ACCESS-NRI/MED-live-diagnostics/main/docs/notebooks/assets/tutorial_image_3.png\" width=\"60%\", border=1, bordercolor='white'/>\n",
+    "<img src=\"https://raw.githubusercontent.com/ACCESS-NRI/MED-live-diagnostics/main/docs/notebooks/assets/tutorial_image_3.png\" width=\"100%\", border=1, bordercolor='white'/>\n",
     "</div>\n",
     "<br></br>\n",
     "\n",
     "iv) Once loaded, a plot displaying the first data variable in the list will appear. Use the dropdown list to select and plot any available model variables.\n",
     "<div>\n",
-    "<img src=\"https://raw.githubusercontent.com/ACCESS-NRI/MED-live-diagnostics/main/docs/notebooks/assets/tutorial_image_4.png\" width=\"60%\", border=1, bordercolor='white'/>\n",
+    "<img src=\"https://raw.githubusercontent.com/ACCESS-NRI/MED-live-diagnostics/main/docs/notebooks/assets/tutorial_image_4.png\" width=\"100%\", border=1, bordercolor='white'/>\n",
     "</div>\n",
     "<br></br>\n",
     "\n",
@@ -107,19 +108,19 @@
     "\n",
     "v) The reference model dropdown menu is pre-filled with all available models of the same type from the [ACCESS-NRI Intake Catalog](https://github.com/ACCESS-NRI/access-nri-intake-catalog) (in this example the list contains all models of type 'CM2'). Select the reference model of choice and click 'Load model'.\n",
     "<div>\n",
-    "<img src=\"https://raw.githubusercontent.com/ACCESS-NRI/MED-live-diagnostics/main/docs/notebooks/assets/tutorial_image_5.png\" width=\"60%\", border=1, bordercolor='white'/>\n",
+    "<img src=\"https://raw.githubusercontent.com/ACCESS-NRI/MED-live-diagnostics/main/docs/notebooks/assets/tutorial_image_5.png\" width=\"100%\", border=1, bordercolor='white'/>\n",
     "</div>\n",
     "<br></br>\n",
     "\n",
     "vi) If an optional reference model has been selected, a reference dataset dropdown menu will appear displaying all available datasets from the selected reference model. Select the dataset you wish to monitor and click 'Load dataset'.\n",
     "<div>\n",
-    "<img src=\"https://raw.githubusercontent.com/ACCESS-NRI/MED-live-diagnostics/main/docs/notebooks/assets/tutorial_image_6.png\" width=\"60%\", border=1, bordercolor='white'/>\n",
+    "<img src=\"https://raw.githubusercontent.com/ACCESS-NRI/MED-live-diagnostics/main/docs/notebooks/assets/tutorial_image_6.png\" width=\"100%\", border=1, bordercolor='white'/>\n",
     "</div>\n",
     "<br></br>\n",
     "\n",
     "vii) Once loaded, a plot displaying the first data variable in the list will appear. Use the dropdown list to select and plot any available reference model variables. N.B. Unlike the live model plot above, if multiple flavours of a particular model exist (e.g. b7578a, by578b etc), all variants will be displayed.\n",
     "<div>\n",
-    "<img src=\"https://raw.githubusercontent.com/ACCESS-NRI/MED-live-diagnostics/main/docs/notebooks/assets/tutorial_image_7.png\" width=\"60%\", border=1, bordercolor='white'/>\n",
+    "<img src=\"https://raw.githubusercontent.com/ACCESS-NRI/MED-live-diagnostics/main/docs/notebooks/assets/tutorial_image_7.png\" width=\"100%\", border=1, bordercolor='white'/>\n",
     "</div>\n",
     "<br></br>"
    ]
