--- a/docs/notebooks/getting_started_tutorial.ipynb
+++ b/docs/notebooks/getting_started_tutorial.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e3fd80f-c423-430a-b08a-df66b61fc80c",
+   "id": "8937af71-2dd9-4265-b2b1-76881eb16eef",
    "metadata": {},
    "source": [
     "### 2. Create live model session\n",
@@ -73,10 +73,28 @@
     "- Start the <i>background scheduler</i> to check for data at the nominted period\n",
     "- Start the <i>dask</i> cluster\n",
     "- Retrieve the most up to date nominated model data and build a new ESM datastore. N.B. This is saved as a compressed *.csv in the user's $HOME directory on Gadi\n",
-    "- Creates both the <span style=\"color:lightblue\">blue</span> 'status' and <span style=\"color:orange\">orange</span> 'catalog' information boxes.\n",
-    "\n",
-    "---------------------\n",
-    "\n",
+    "- Creates both the <span style=\"color:lightblue\">blue</span> 'status' and <span style=\"color:orange\">orange</span> 'catalog' information boxes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "85b8e917-1704-4183-8bda-14e9515081c6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "session = med_diagnostics.session.CreateModelDiagnosticsSession(model_type='CM2', \n",
+    "                                                                model_path='/g/data/p73/archive/non-CMIP/ACCESS-CM2/by647', \n",
+    "                                                                period=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e3fd80f-c423-430a-b08a-df66b61fc80c",
+   "metadata": {},
+   "source": [
     "### 3. Using the interface\n",
     "\n",
     "i) Once a session is started, you will see the following sesion summary and <span style=\"color:lightblue\">blue</span> status message while the new intake catalog is being built from the live model data. Depending on the size of the model data, this can take a number of minutes. The dask cluster address (in this case: /proxy/40595/status) can be used to monitor data retrieval by adding it to the 'Dask Dashboard URL' found in the left panel.\n",
@@ -123,20 +141,6 @@
     "<img src=\"https://raw.githubusercontent.com/ACCESS-NRI/MED-live-diagnostics/main/docs/notebooks/assets/tutorial_image_7.png\" width=\"100%\", border=1, bordercolor='white'/>\n",
     "</div>\n",
     "<br></br>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "85b8e917-1704-4183-8bda-14e9515081c6",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "session = med_diagnostics.session.CreateModelDiagnosticsSession(model_type='CM2', \n",
-    "                                                                model_path='/g/data/p73/archive/non-CMIP/ACCESS-CM2/by647', \n",
-    "                                                                period=5)"
    ]
   },
   {
