--- a/docs/notebooks/getting_started_tutorial.ipynb
+++ b/docs/notebooks/getting_started_tutorial.ipynb
@@ -68,7 +68,7 @@
     "- period: int/float/str (Period in minutes for background scheduler to monitor model_path for new data. If period=None, defaults to 60).\n",
     "- timezone: str (Timezone required for scheduler in tinfo 'Region/Location' format. Default = 'Australia/Canberra')\n",
     "\n",
-    "#### The <b>CreateModelDiagnosticsSession()</b> class instance triggers the following tasks in the background:\n",
+    "##### The <b>CreateModelDiagnosticsSession()</b> class instance triggers the following tasks in the background:\n",
     "\n",
     "- Start the <i>background scheduler</i> to check for data at the nominted period\n",
     "- Start the <i>dask</i> cluster\n",
