broken links fix, added step 0 to start ARE session in getting_started tutorial

--- a/docs/notebooks/getting_started_tutorial.ipynb
+++ b/docs/notebooks/getting_started_tutorial.ipynb
@@ -30,11 +30,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5d7eec32",
+   "metadata": {},
+   "source": [
+    "### 0. Install and start and ARE Session\n",
+    "As described in the [homepage](https://med-live-diagnostics.readthedocs.io/en/latest/index.html#installation-and-getting-started) of this documentation, you need to clone the MLD repository and start an ARE JupyterLab Session."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f55c537e-6eac-4c7e-a85e-3893c26a1551",
    "metadata": {},
    "source": [
     "### 1. Set up access \n",
-    "First, lets import the <i>med_diagnostics</i> package that has been cloned to an accessbile project location on Gadi"
+    "Now, lets import the <i>med_diagnostics</i> package that has been cloned to an accessbile project location on Gadi"
    ]
   },
   {
