--- a/docs/notebooks/getting_started_tutorial.ipynb
+++ b/docs/notebooks/getting_started_tutorial.ipynb
@@ -95,8 +95,7 @@
    "outputs": [],
    "source": [
     "session = med_diagnostics.session.CreateModelDiagnosticsSession(model_type='CM2', \n",
-    "                                                                model_path='path/to/your/live/model/data/output', \n",
-    "                                                                period=20)"
+    "                                                                model_path='path/to/your/live/model/data/output')"
    ]
   },
   {
