--- a/docs/notebooks/getting_started_tutorial.ipynb
+++ b/docs/notebooks/getting_started_tutorial.ipynb
@@ -54,10 +54,8 @@
    "outputs": [],
    "source": [
     "# Append cloned package path to system path\n",
-    "import sys\n",
-    "sys.path.append('/g/data/ [path/to/your/project/directory] /med-live_diagnostics/src')\n",
     "\n",
-    "# Import med_diagnostics package for local Gadi location\n",
+    "# Import med_diagnostics package\n",
     "import med_diagnostics\n",
     "\n",
     "# Import to display tutorial images only\n",
